Bug 193924: corrected UML2 driver